--- a/themes/css/qwerty.css
+++ b/themes/css/qwerty.css
@@ -1,3 +1,6 @@
+/*! normalize.css v3.0.2 | MIT License | git.io/normalize */
+html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary{display:block}audio,canvas,progress,video{display:inline-block;vertical-align:baseline}audio:not([controls]){display:none;height:0}[hidden],template{display:none}a{background-color:transparent}a:active,a:hover{outline:0}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:bold}dfn{font-style:italic}h1{font-size:2em;margin:.67em 0}mark{background:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-0.5em}sub{bottom:-0.25em}img{border:0;svg:not(:root){overflow:hidden}figure{margin:1em 40px}hr{-moz-box-sizing:content-box;box-sizing:content-box;height:0}pre{overflow:auto}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}button,input,optgroup,select,textarea{color:inherit;font:inherit;margin:0}button{overflow:visible}button,select{text-transform:none}button,html input[type="button"],input[type="reset"],input[type="submit"]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}input{line-height:normal}input[type="checkbox"],input[type="radio"]{box-sizing:border-box;padding:0}input[type="number"]::-webkit-inner-spin-button,input[type="number"]::-webkit-outer-spin-button{height:auto}input[type="search"]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{-webkit-appearance:none}fieldset{border:1px solid #c0c0c0;margin:0 2px;padding:.35em .625em .75em}legend{border:0;padding:0}textarea{overflow:auto}optgroup{font-weight:bold}table{border-collapse:collapse;border-spacing:0}td,th{padding:0}
+
 /*
 * Skeleton V2.0.4
 * Copyright 2014, Dave Gamache
@@ -69,7 +72,7 @@
 }
 
 /* For devices larger than 550px */
-@media (min-width: 1200px) {
+@media (min-width: 550px) {
   .container {
     width: 90%; }
   .column,
@@ -89,7 +92,7 @@
   .seven.columns                  { width: 56.6666666667%; }
   .eight.columns                  { width: 65.3333333333%; }
   .nine.columns                   { width: 74.0%;          }
-  .ten.columns                    { width: 86.6%; }
+  .ten.columns                    { width: 82.6666666667%; }
   .eleven.columns                 { width: 91.3333333333%; }
   .twelve.columns                 { width: 100%; margin-left: 0; }
 
@@ -1180,16 +1183,16 @@ nav ul{
 }
 
 .fix-menu-header {
-  position: absolute;
+  position: fixed;
   z-index: 1100;
 }
 
 @media (min-width: 1200px) {
   .default-nav {
-    position: relative;
+    position: absolute;
     background-color: #333;
     z-index: 1000;
-    height: 100vmax;
+    height: 100vh;
     margin-left: 0;
   }
 
@@ -1199,10 +1202,9 @@ nav ul{
   }
 
   .default-nav ul li {
-    line-height: 40px;
+    line-height: 70px;
     margin: 0;
     padding-left: 24px;
-    border-bottom: 1px solid #3e3e3e;
     -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
@@ -1210,7 +1212,7 @@ nav ul{
   }
 
   .default-nav ul li:hover {
-    line-height: 40px;
+    line-height: 70px;
     margin: 0;
     background-color: #555;
   }
@@ -1218,42 +1220,25 @@ nav ul{
   .default-nav ul a {
     color: #fff
   }
-
-  .default-nav .drawer {
-    display: none;
-  }
 }
 
 @media (max-width: 1200px) {
   .default-nav {
     position: relative;
     background-color: #333;
+    z-index: 1000;
     width:  100% !important;
     margin-left: 0;
   }
 
-  .default-nav .text-logo {
-    z-index: 100;
-  }
-
-  .default-nav .drawer-items {
-    margin-top: -306px;
-    z-index: -100;
-    display: none;
-  }
-
   .default-nav ul {
     list-style: none;
-    -webkit-transition: all 0.3s ease;
-    -moz-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    transition: all  0.3s ease;
+    margin-top: 60px;
   }
 
   .default-nav ul li {
     text-align: center;
     line-height: 26px;
-    border-bottom: 1px solid #3e3e3e;
     margin: 0;
     -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
@@ -1272,11 +1257,6 @@ nav ul{
 
   .default-nav ul a {
     color: #fff
-  }
-
-  .default-nav .drawer {
-    height: 25px;
-    padding: 0;
   }
 }
 
@@ -1297,7 +1277,7 @@ nav ul{
 
 .card {
   position: relative;
-  background: #FFF;
+  background: #fefff9;
   color: #363636;
   text-decoration: none;
   -moz-box-shadow: rgba(0, 0, 0, 0.19) 0 0 8px 0;
@@ -1379,17 +1359,12 @@ nav ul{
   padding: 12px;
   margin: 0;
 }
-
 .card .card-close {
   position: absolute;
   top: 12px;
   right: 12px;
-  cursor: pointer;
 }
 
-.card .card-close:hover {
-  color: #eee;
-}
 /* COLOR */
 .cards .filled .card-meta span {
   color: rgba(255, 255, 255, 0.92) !important;
@@ -1514,4 +1489,21 @@ nav ul{
   right: 0;
   bottom: 0px;
   padding: 8px 12px 12px 12px;
+}
+
+/* Accennt */
+.accent-dark {
+  border-top: 2px #333333 solid;
+}
+.accent-red {
+  border-top: 2px #ad1e25 solid;
+}
+.accent-blue {
+  border-top: 2px #007bc3 solid;
+}
+.accent-orange {
+  border-top: 2px #eb7413 solid;
+}
+.accent-green {
+  border-top: 2px #008051 solid;
 }
