--- a/themes/css/qwerty.css
+++ b/themes/css/qwerty.css
@@ -38,13 +38,13 @@
 
 /* Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-.wrapper {
+.wrap {
   position: relative;
   width: 100%;
   margin: 0 auto;
   box-sizing: border-box;
 }
-.container {
+.pack {
   position: relative;
   width: 100%;
   max-width: 1240px;
@@ -52,8 +52,8 @@
   margin: 0 auto;
   box-sizing: border-box;
 }
-.column,
-.columns {
+.col,
+.cols {
   width: 100%;
   float: left;
   box-sizing: border-box; }
@@ -64,72 +64,72 @@
 
 /* For devices larger than 400px */
 @media (min-width: 400px) {
-  .container {
+  .pack {
     width: 95%;
     padding: 20px; }
 }
 
 /* For devices larger than 550px */
 @media (min-width: 550px) {
-  .container {
+  .pack {
     width: 90%; }
-  .column,
-  .columns {
+  .col,
+  .cols {
     margin-left: 1.5%; }
-  .column:first-child,
-  .columns:first-child {
+  .col:first-child,
+  .cols:first-child {
     margin-left: 0; }
 
-  .one.column,
-  .one.columns                    { width: 4.66666666667%; }
-  .two.columns                    { width: 13.3333333333%; }
-  .three.columns                  { width: 23.87%;            }
-  .four.columns                   { width: 32.33%; }
-  .five.columns                   { width: 39.3333333333%; }
-  .six.columns                    { width: 49.25%;            }
-  .seven.columns                  { width: 56.6666666667%; }
-  .eight.columns                  { width: 65.3333333333%; }
-  .nine.columns                   { width: 74.0%;          }
-  .ten.columns                    { width: 86.666667%; }
-  .eleven.columns                 { width: 91.3333333333%; }
-  .twelve.columns                 { width: 100%; margin-left: 0; }
+  .one.col,
+  .one.cols                    { width: 4.66666666667%; }
+  .two.cols                    { width: 13.3333333333%; }
+  .three.cols                  { width: 23.87%;            }
+  .four.cols                   { width: 32.33%; }
+  .five.cols                   { width: 39.3333333333%; }
+  .six.cols                    { width: 49.25%;            }
+  .seven.cols                  { width: 56.6666666667%; }
+  .eight.cols                  { width: 65.3333333333%; }
+  .nine.cols                   { width: 74.0%;          }
+  .ten.cols                    { width: 86.666667%; }
+  .eleven.cols                 { width: 91.3333333333%; }
+  .twelve.cols                 { width: 100%; margin-left: 0; }
 
-  .one-third.column               { width: 30.6666666667%; }
-  .two-thirds.column              { width: 65.3333333333%; }
+  .one-third.col               { width: 30.6666666667%; }
+  .two-thirds.col              { width: 65.3333333333%; }
 
-  .one-half.column                { width: 48%; }
+  .one-half.col                { width: 48%; }
 
   /* Offsets */
-  .offset-by-one.column,
-  .offset-by-one.columns          { margin-left: 8.66666666667%; }
-  .offset-by-two.column,
-  .offset-by-two.columns          { margin-left: 17.3333333333%; }
-  .offset-by-three.column,
-  .offset-by-three.columns        { margin-left: 26%;            }
-  .offset-by-four.column,
-  .offset-by-four.columns         { margin-left: 34.6666666667%; }
-  .offset-by-five.column,
-  .offset-by-five.columns         { margin-left: 43.3333333333%; }
-  .offset-by-six.column,
-  .offset-by-six.columns          { margin-left: 52%;            }
-  .offset-by-seven.column,
-  .offset-by-seven.columns        { margin-left: 60.6666666667%; }
-  .offset-by-eight.column,
-  .offset-by-eight.columns        { margin-left: 69.3333333333%; }
-  .offset-by-nine.column,
-  .offset-by-nine.columns         { margin-left: 78.0%;          }
-  .offset-by-ten.column,
-  .offset-by-ten.columns          { margin-left: 86.6666666667%; }
-  .offset-by-eleven.column,
-  .offset-by-eleven.columns       { margin-left: 95.3333333333%; }
+  .offset-by-one.col,
+  .offset-by-one.cols          { margin-left: 8.66666666667%; }
+  .offset-by-two.col,
+  .offset-by-two.cols          { margin-left: 17.3333333333%; }
+  .offset-by-three.col,
+  .offset-by-three.cols        { margin-left: 26%;            }
+  .offset-by-four.col,
+  .offset-by-four.cols         { margin-left: 34.6666666667%; }
+  .offset-by-five.col,
+  .offset-by-five.cols         { margin-left: 43.3333333333%; }
+  .offset-by-six.col,
+  .offset-by-six.cols          { margin-left: 52%;            }
+  .offset-by-seven.col,
+  .offset-by-seven.cols        { margin-left: 60.6666666667%; }
+  .offset-by-eight.col,
+  .offset-by-eight.cols        { margin-left: 69.3333333333%; }
+  .offset-by-nine.col,
+  .offset-by-nine.cols         { margin-left: 78.0%;          }
+  .offset-by-ten.col,
+  .offset-by-ten.cols          { margin-left: 86.6666666667%; }
+  .offset-by-eleven.col,
+  .offset-by-eleven.cols       { margin-left: 95.3333333333%; }
 
-  .offset-by-one-third.column,
-  .offset-by-one-third.columns    { margin-left: 34.6666666667%; }
-  .offset-by-two-thirds.column,
-  .offset-by-two-thirds.columns   { margin-left: 69.3333333333%; }
+  .offset-by-one-third.col,
+  .offset-by-one-third.cols    { margin-left: 34.6666666667%; }
+  .offset-by-two-thirds.col,
+  .offset-by-two-thirds.cols   { margin-left: 69.3333333333%; }
 
-  .offset-by-one-half.column,
-  .offset-by-one-half.columns     { margin-left: 52%; }
+  .offset-by-one-half.col,
+  .offset-by-one-half.cols     { margin-left: 52%; }
 
 }
 
@@ -773,7 +773,7 @@ hr {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 /* Self Clearing Goodness */
-.container:after,
+.pack:after,
 .row:after,
 .u-cf {
   content: "";
@@ -982,7 +982,7 @@ there.
   transform: translate3d(-200px, 0, 0);
 }
 
-.pmenu-open-left #wrapper,
+.pmenu-open-left #wrap,
 .pmenu-open-left .push {
   -webkit-transform: translate3d(200px, 0, 0);
   -ms-transform: translate3d(200px, 0, 0);
@@ -995,7 +995,7 @@ there.
   transform: translate3d(200px, 0, 0);
 }
 
-.pmenu-open-right #wrapper,
+.pmenu-open-right #wrap,
 .pmenu-open-right .push {
   -webkit-transform: translate3d(-200px, 0, 0);
   -ms-transform: translate3d(-200px, 0, 0);
@@ -1010,7 +1010,7 @@ there.
 }
 
 /* Menu Transitions */
-#wrapper,
+#wrap,
 .pmenu,
 .push {
   transition: transform 0.2s cubic-bezier(0.16, 0.68, 0.43, 0.99);
