--- a/themes/css/qwerty.css
+++ b/themes/css/qwerty.css
@@ -94,42 +94,42 @@
   .eleven.cols                 { width: 91.3333333333%; }
   .twelve.cols                 { width: 100%; margin-left: 0; }
 
-  .one-third.col               { width: 30.6666666667%; }
-  .two-thirds.col              { width: 65.3333333333%; }
+  .one-third               { width: calc(100%/3); }
+  .two-thirds              { width: calc(100%/3*2); }
 
-  .one-half.col                { width: 48%; }
+  .one-half                { width: calc(100%/2); }
 
   /* Offsets */
-  .offset-by-one.col,
-  .offset-by-one.cols          { margin-left: 8.66666666667%; }
-  .offset-by-two.col,
-  .offset-by-two.cols          { margin-left: 17.3333333333%; }
-  .offset-by-three.col,
-  .offset-by-three.cols        { margin-left: 26%;            }
-  .offset-by-four.col,
-  .offset-by-four.cols         { margin-left: 34.6666666667%; }
-  .offset-by-five.col,
-  .offset-by-five.cols         { margin-left: 43.3333333333%; }
-  .offset-by-six.col,
-  .offset-by-six.cols          { margin-left: 52%;            }
-  .offset-by-seven.col,
-  .offset-by-seven.cols        { margin-left: 60.6666666667%; }
-  .offset-by-eight.col,
-  .offset-by-eight.cols        { margin-left: 69.3333333333%; }
-  .offset-by-nine.col,
-  .offset-by-nine.cols         { margin-left: 78.0%;          }
-  .offset-by-ten.col,
-  .offset-by-ten.cols          { margin-left: 86.6666666667%; }
-  .offset-by-eleven.col,
-  .offset-by-eleven.cols       { margin-left: 95.3333333333%; }
+  .push-one.col,
+  .push-one.cols          { margin-left: 8.66666666667%; }
+  .push-two.col,
+  .push-two.cols          { margin-left: 17.3333333333%; }
+  .push-three.col,
+  .push-three.cols        { margin-left: 26%;            }
+  .push-four.col,
+  .push-four.cols         { margin-left: 34.6666666667%; }
+  .push-five.col,
+  .push-five.cols         { margin-left: 43.3333333333%; }
+  .push-six.col,
+  .push-six.cols          { margin-left: 52%;            }
+  .push-seven.col,
+  .push-seven.cols        { margin-left: 60.6666666667%; }
+  .push-eight.col,
+  .push-eight.cols        { margin-left: 69.3333333333%; }
+  .push-nine.col,
+  .push-nine.cols         { margin-left: 78.0%;          }
+  .push-ten.col,
+  .push-ten.cols          { margin-left: 86.6666666667%; }
+  .push-eleven.col,
+  .push-eleven.cols       { margin-left: 95.3333333333%; }
 
-  .offset-by-one-third.col,
-  .offset-by-one-third.cols    { margin-left: 34.6666666667%; }
-  .offset-by-two-thirds.col,
-  .offset-by-two-thirds.cols   { margin-left: 69.3333333333%; }
+  .push-one-third.col,
+  .push-one-third.cols    { margin-left: 34.6666666667%; }
+  .push-two-thirds.col,
+  .push-two-thirds.cols   { margin-left: 69.3333333333%; }
 
-  .offset-by-one-half.col,
-  .offset-by-one-half.cols     { margin-left: 52%; }
+  .push-one-half.col,
+  .push-one-half.cols     { margin-left: 52%; }
 
 }
 
@@ -232,7 +232,7 @@ input[type="button"]:hover,
 button:focus,
 input[type="submit"]:focus,
 input[type="reset"]:focus,
-input[type="button"]:focus {
+input[type="button"]:focus {s
   outline: 0;
 }
 .btn:active,
@@ -1260,233 +1260,72 @@ nav ul{
 
 /* Cards
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-
-.cards {
-  display: -webkit-flex;
-  display: flex;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
 .card {
-  position: relative;
-  background: #fefff9;
-  color: #363636;
-  text-decoration: none;
-  -moz-box-shadow: rgba(0, 0, 0, 0.19) 0 0 8px 0;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.19) 0 0 8px 0;
+  background-color: #fff;
+  border-radius: 4px;
   box-shadow: rgba(0, 0, 0, 0.15) 1px 1px 2px 0, rgba(0, 0, 0, 0.15) 0 0 6px 0;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  border-radius: 3px;
   overflow: hidden;
-  margin-top: 15px;
 }
-@media (max-width: 1024px) {
-  .card {
-    width: 100%;
-    margin-right: 0px;
-  }
+.card-red {
+  border-top: dashed 1px rgba(173,30,37,0.6);
 }
-
-.card span {
-  display: block;
+.card-red .head {
+  background-color: rgba(173,30,37,0.3);
+  color: rgba(173,30,37,0.8);
 }
-.card .card-summary {
-  padding: 12px;
+.card-yellow .head {
+  background-color: rgba(235,116,19,0.3);
+  color: rgba(235,116,19,0.8);
+}
+.card-green .head {
+  background-color: rgba(0, 128, 81,0.3);
+  color: rgba(0, 128, 81,0.8);
+}
+.card-blue .head {
+  background-color: rgba(0, 123, 195,0.3);
+  color: rgba(0, 123, 195,0.8);
+}
+.card .head {
+  padding: .8rem; padding-bottom: .5rem;
+}
+.card .image-head {
+  background-color: #999;
+  height: 200px;
+  background-size: cover;
+}
+.card .image-head .title {
+  position: absolute;
+  padding: 8px;
+  bottom: 45px;
+  color: #fff;
+}
+.card .body {
   border-top: solid 1px rgba(0, 0, 0, 0.1);
-  border-bottom: solid 1px rgba(0, 0, 0, 0.1);
-  max-height: 5.8em;
-  overflow: hidden;
+  padding: .8rem;
+  padding-bottom: .5rem;
 }
-.card .card-header {
-  overflow: hidden;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  background-color: rgba(255, 255, 255, 0.15);
-  background-blend-mode: overlay;
-  -moz-border-radius: 4px 4px 0 0;
-  -webkit-border-radius: 4px;
-  border-radius: 4px 4px 0 0;
+.card .foot {
+  display: flex;
 }
-.card .card-header-img {
-  position: relative;
-  height: 175px;
-  overflow: hidden;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  background-color: rgba(255, 255, 255, 0.15);
-  background-blend-mode: overlay;
-  -moz-border-radius: 4px 4px 0 0;
-  -webkit-border-radius: 4px;
-  border-radius: 4px 4px 0 0;
-}
-.card .card-header-img:hover, .card .card-header-img:focus {
-  background-color: rgba(255, 255, 255, 0);
-}
-.card .card-header .card-title {
-  background: #fff;
-  padding: 12px;
+.card .card-btn {
+  background-color: #fff;
   color: #333;
-  font-family: 'Poppins', sans-serif;
-  text-transform: uppercase;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-}
-.card .card-header-img .card-title {
-  background: rgba(0, 0, 0, 0.55);
-  padding: 12px 0px;
-  color: white;
-  font-family: 'Poppins', sans-serif;
-  text-transform: uppercase;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-}
-.card > .card-title h3 {
-  font-size: 1.2em;
-  line-height: 1.2;
-  padding: 12px;
-  margin: 0;
-}
-.card .card-close {
-  position: absolute;
-  top: 12px;
-  right: 12px;
-}
-
-/* COLOR */
-.cards .filled .card-meta span {
-  color: rgba(255, 255, 255, 0.92) !important;
-}
-.cards .filled .dark {
-  background-color: #333;
-  color: #fff;
-}
-.cards .filled .red {
-  background-color: #ad1e25;
-  color: #fff;
-}
-.cards .filled .orange {
-  background-color: #eb7413;
-  color: #fff;
-}
-.cards .filled .blue {
-  background-color: #007bc3;
-  color: #fff;
-}
-.cards .filled .green {
-  background-color: #008051;
-  color: #fff;
-}
-
-/* COLOR THEME */
-.cards .dang .card-meta span {
-  color: rgba(255, 255, 255, 0.92) !important;
-}
-.cards .warn .card-meta span {
-  color: rgba(255, 255, 255, 0.92) !important;
-}
-.cards .info .card-meta span {
-  color: rgba(255, 255, 255, 0.92) !important;
-}
-.cards .succ .card-meta span {
-  color: rgba(255, 255, 255, 0.92) !important;
-}
-.cards .dang .card-title {
-  background-color: #ad1e25;
-  color: #fff;
-}
-.cards .dang .card-summary {
-  background-color: #ad1e25;
-  color: #fff;
-}
-.cards .dang .card-meta {
-  background-color: #ad1e25;
-  color: #fff;
-}
-.cards .warn .card-title {
-  background-color: #eb7413;
-  color: #fff;
-}
-.cards .warn .card-summary {
-  background-color: #eb7413;
-  color: #fff;
-}
-.cards .warn .card-meta {
-  background-color: #eb7413;
-  color: #fff;
-}
-.cards .info .card-title {
-  background-color: #007bc3;
-  color: #fff;
-}
-.cards .info .card-summary {
-  background-color: #007bc3;
-  color: #fff;
-}
-.cards .info .card-meta {
-  background-color: #007bc3;
-  color: #fff;
-}
-.cards .succ .card-title {
-  background-color: #008051;
-  color: #fff;
-}
-.cards .succ .card-summary {
-  background-color: #008051;
-  color: #fff;
-}
-.cards .succ .card-meta {
-  background-color: #008051;
-  color: #fff;
-}
-
-.card .card-header-img .card-title h3 {
-  font-size: 1.2em;
-  line-height: 1.2;
-  padding: 12px;
-  margin: 0;
-}
-
-.card .card-meta {
+  border-top: solid 1px rgba(0, 0, 0, 0.1);
+  border-left: solid 1px rgba(0, 0, 0, 0.1);
+  padding: .6rem;
+  padding-bottom: .5rem;
+  box-sizing: border-box;
+  font-size: 1.2rem;
+  display: inline-block;
   position: relative;
-  width: 100%;
-  height: 30px;
-  border-radius: 0 0 3px 3px;
+  white-space: nowrap;
 }
-
-.card .card-meta .left {
-  max-height: 1em;
-  color: #888;
-  font-size: .7em;
-  text-transform: uppercase;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0px;
-  padding: 8px 12px 12px 12px;
+.card .danger {
+  color: rgba(173,30,37,0.8);
 }
-
-.card .card-meta .right {
-  max-height: 1em;
-  color: #888;
-  font-size: .7em;
-  text-transform: uppercase;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0px;
-  padding: 8px 12px 12px 12px;
+.card .card-btn:active {
+  top: 3px;
+  opacity: 0.8;
 }
 
 /* Accennt */
